# lazy-mouse

./: Readme.md
client/: Cargo.toml  Dioxus.toml  README.md
client/assets/: main.css  normalize.css
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
