[package]
name = "r-mouse"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.7.0-alpha.3", features = [] }

# tracing ={ version = "*"}
tungstenite = "0.27.0"
async-std = "1.13.1"
# dioxus-free-icons = { version = "0.9", features = ["font-awesome-brands"] }
dioxus-free-icons = {git = "https://github.com/dioxus-community/dioxus-free-icons.git", branch = "main", features = [
    "material-design-icons-content", "material-design-icons-hardware", "material-design-icons-action"
]}
[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
